--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,4 +33,5 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_executable(motor_node src/motor_node.cpp)
 add_dependencies(motor_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#target_link_libraries(motor_node ${catkin_LIBRARIES})
 target_link_libraries(motor_node ${catkin_LIBRARIES} pigpiod_if2)
