--- a/Olaf_bot/Olaf_slam/package.xml
+++ b/Olaf_bot/Olaf_slam/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>omo_r1_slam</name>
+  <name>Olaf_slam</name>
   <version>0.0.1</version>
   <description>
     OMO R1 robot package - launchers which uses optimized gmapping parameters.
@@ -11,6 +11,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
-  <exec_depend>omo_r1_bringup</exec_depend>
+  <exec_depend>Olaf_bringup</exec_depend>
   <exec_depend>gmapping</exec_depend>
 </package>
