--- a/Olaf_bot/Olaf/package.xml
+++ b/Olaf_bot/Olaf/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>omo_r1</name>
+  <name>Olaf</name>
   <version>0.0.1</version>
   <description>
     OMO R1 robot meta package
@@ -9,12 +9,12 @@
   <author email="bishopearson@gmail.com">Bishop Pearson</author>
   <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
   <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>omo_r1_bringup</exec_depend>
-  <exec_depend>omo_r1_description</exec_depend>
-  <exec_depend>omo_r1_gazebo</exec_depend>
-  <exec_depend>omo_r1_navigation</exec_depend>
-  <exec_depend>omo_r1_slam</exec_depend>
-  <exec_depend>omo_r1_teleop</exec_depend>
-  <exec_depend>omo_r1_marker_tracker</exec_depend>
+  <exec_depend>Olaf_bringup</exec_depend>
+  <exec_depend>Olaf_description</exec_depend>
+  <exec_depend>Olaf_gazebo</exec_depend>
+  <exec_depend>Olaf_navigation</exec_depend>
+  <exec_depend>Olaf_slam</exec_depend>
+  <exec_depend>Olaf_teleop</exec_depend>
+  <exec_depend>Olaf_marker_tracker</exec_depend>
   <export><metapackage/></export>
 </package>
