--- a/Olaf_bot/Olaf_description/package.xml
+++ b/Olaf_bot/Olaf_description/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>omo_r1_description</name>
+  <name>Olaf_description</name>
   <version>0.0.1</version>
   <description>
     OMO R1 robot package - robot description
