--- a/Olaf_bot/Olaf_bringup/CMakeLists.txt
+++ b/Olaf_bot/Olaf_bringup/CMakeLists.txt
@@ -12,6 +12,7 @@ add_compile_options(-std=c++11)
 ################################################################################
 find_package(catkin REQUIRED COMPONENTS
   rospy
+  roscpp
   sensor_msgs
   nav_msgs
   geometry_msgs
@@ -20,6 +21,11 @@ find_package(catkin REQUIRED COMPONENTS
   omo_r1_description
   message_generation
 )
+add_message_files(
+  FILES
+  To_odom.msg
+)
+
 
 add_service_files(
   FILES
@@ -49,7 +55,7 @@ generate_messages(
 )
 
 catkin_package(
-  CATKIN_DEPENDS rospy sensor_msgs nav_msgs geometry_msgs tf usb_cam omo_r1_description
+  CATKIN_DEPENDS rospy roscpp sensor_msgs nav_msgs geometry_msgs tf usb_cam omo_r1_description message_runtime
 )
 
 
@@ -60,6 +66,10 @@ catkin_package(
 ################################################################################
 # Install
 ################################################################################
+include_directories(
+  ${catkin_INCLUDE_DIRS}
+)
+
 catkin_install_python(PROGRAMS
   nodes/omo_r1_motor_node.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -69,6 +79,17 @@ install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
+add_executable(odom_hh nodes/odom_hh.cpp)
+add_dependencies(odom_hh ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(odom_hh ${catkin_LIBRARIES})
+
+add_executable(pub_vel nodes/pub_vel.cpp)
+add_dependencies(pub_vel ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(pub_vel ${catkin_LIBRARIES})
+
+add_executable(velCal nodes/velCal.cpp)
+add_dependencies(velCal ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(velCal ${catkin_LIBRARIES})
 ################################################################################
 # Test
 ################################################################################
