--- a/Olaf_bot/Olaf_gazebo/CMakeLists.txt
+++ b/Olaf_bot/Olaf_gazebo/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Set minimum required version of cmake, project name and compile options
 ################################################################################
 cmake_minimum_required(VERSION 2.8.3)
-project(omo_r1_gazebo)
+project(Olaf_gazebo)
 
 # Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
