--- a/Olaf_bot/Olaf_gazebo/package.xml
+++ b/Olaf_bot/Olaf_gazebo/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>omo_r1_gazebo</name>
+  <name>Olaf_gazebo</name>
   <version>0.0.1</version>
   <description>
     Gazebo simulation package for the OMO R1
