--- a/Olaf_bot/Olaf_bringup/package.xml
+++ b/Olaf_bot/Olaf_bringup/package.xml
@@ -23,7 +23,7 @@
   <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>tf</depend>
-  <depend>usb_cam</depend>
+  <!-- <depend>usb_cam</depend> -->
   <depend>Olaf_description</depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
