--- a/Olaf_bot/Olaf/package.xml
+++ b/Olaf_bot/Olaf/package.xml
@@ -3,7 +3,7 @@
   <name>Olaf</name>
   <version>0.0.1</version>
   <description>
-    OMO R1 robot meta package
+    Olaf robot meta package
   </description>
   <license>Apache 2.0</license>
   <author email="bishopearson@gmail.com">Bishop Pearson</author>
