--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "/home/hh/catkin_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
     ],
-    "cmake.sourceDirectory": "${workspaceFolder}/Olaf_bot/aws-robomaker-hospital-world-ros1",
+    "cmake.sourceDirectory": "${workspaceFolder}/Olaf_bot/Olaf",
     "python.analysis.extraPaths": [
         "/home/hh/catkin_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
