--- a/robot_localization/params/ukf_template.yaml
+++ b/robot_localization/params/ukf_template.yaml
@@ -163,10 +163,10 @@ odom0_twist_rejection_threshold: 1
 
 imu0: imu/data
 imu0_config: [false, false, false,
-              true,  true,  true,
+              false,  false,  true,
               false, false, false,
-              true,  true,  true,
-              true,  true,  true]
+              false,  false,  true,
+              false,  false,  false]
 imu0_nodelay: false
 imu0_differential: false
 imu0_relative: true
