--- a/Olaf_bot/Olaf_bringup/package.xml
+++ b/Olaf_bot/Olaf_bringup/package.xml
@@ -17,6 +17,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>pigpiod_if2</build_depend>
+  <build_depend>std_srvs</build_depend>
   <depend>rospy</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
@@ -29,7 +30,10 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rosserial_python</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>pigpiod_if2</exec_depend>
   <build_export_depend>pigpiod_if2</build_export_depend>
+  <build_export_depend>std_srvs</build_export_depend>
+
 </package>
