--- a/Olaf_bot/Olaf_bringup/CMakeLists.txt
+++ b/Olaf_bot/Olaf_bringup/CMakeLists.txt
@@ -31,6 +31,7 @@ add_message_files(
 add_service_files(
   FILES
   ResetOdom.srv
+  request_to_motor.srv
   
 )
 
@@ -74,6 +75,8 @@ include_directories(
 
 catkin_install_python(PROGRAMS
   nodes/omo_r1_motor_node.py
+  src/olaf_push.py
+  src/olaf_movegoal.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
