--- a/Olaf_bot/Olaf_navigation/maps/map.yaml
+++ b/Olaf_bot/Olaf_navigation/maps/map.yaml
@@ -1,5 +1,5 @@
-image: map.pgm
-resolution: 0.075000
+image: map.png
+resolution: 0.08500
 origin: [-38.000000, -45.000000, 0.000000]
 negate: 0
 occupied_thresh: 0.65
