--- a/robot_localization/params/ekf_template.yaml
+++ b/robot_localization/params/ekf_template.yaml
@@ -125,7 +125,7 @@ odom0_twist_rejection_threshold: 1
 
 # Further input parameter examples
 odom1: example/another_odom
-odom1_config: [false, false, false,
+odom1_config: [false, false, true,
                false, false, false,
                false, false, false,
                false, false, true,
@@ -161,10 +161,10 @@ twist0_nodelay: false
 
 imu0: imu/data
 imu0_config: [false, false, false,
-              false,  false,  true,
+              true,  true,  true,
               false, false, false,
-              false,  false,  true,
-              false,  false,  false]
+              true,  true,  true,
+              true,  true,  true]
 imu0_nodelay: false
 imu0_differential: false
 imu0_relative: true
