--- a/Olaf_bot/Olaf_navigation/param/global_costmap_params.yaml
+++ b/Olaf_bot/Olaf_navigation/param/global_costmap_params.yaml
@@ -5,6 +5,6 @@ global_costmap:
   update_frequency: 10.0
   publish_frequency: 10.0
   transform_tolerance: 0.5
-
+  inflation_radious: 1.5  #we rec this
   static_map: true
  
