--- a/Olaf_bot/Olaf_navigation/param/costmap_common_params.yaml
+++ b/Olaf_bot/Olaf_navigation/param/costmap_common_params.yaml
@@ -4,7 +4,7 @@ raytrace_range: 12.0
 footprint: [[-0.475, -0.355], [-0.475, 0.355], [0.201, 0.355], [0.201, -0.355]]
 
 #inflation_radius is make costmap range
-inflation_radius: 0.8
+inflation_radius: 1.0  #0.8
 cost_scaling_factor: 10.0
 
 map_type: costmap
